Fix PostCSS scrollbar-color parsing error

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,6 @@
 @layer utilities {
   .scrollbar-thin {
     scrollbar-width: thin;
-    scrollbar-color: #4b5563 #1f2937;
   }
   
   .scrollbar-thin::-webkit-scrollbar {
@@ -43,7 +42,6 @@
   
   .custom-scrollbar {
     scrollbar-width: thin;
-    scrollbar-color: #4b5563 #1f2937;
   }
   
   .custom-scrollbar::-webkit-scrollbar {
